--- a/index.html/index.html
+++ b/index.html/index.html
@@ -92,6 +92,16 @@
             font-size: 14px;
         }
     </style>
+	
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GY1VBVT76Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GY1VBVT76Y');
+</script>
 </head>
 <body>
     <div class="container">
